# fringesearch

./: AUTHORS  Makefile.am  NEWS  README.md  configure.ac  libtool
src/: Makefile.am  base.c  base.h  data.c  data.h  dllist.c  dllist.h  fringe.c  fringe.h  graphs.c  graphs.h  main.c  paral_tools.c  paral_tools.h
src/.deps/: main.Po
src/.deps/.svn/: all-wcprops  entries
src/.deps/.svn/text-base/: main.Po.svn-base
