## Makefile.am for astar
## Process with Automake to create Makefile.in

AM_CFLAGS=-Wall -g

bin_PROGRAMS = 	fs
fs_SOURCES = main.c \
				graphs.c \
				qdbmp.c \
				data.c \
				paral_tools.c \
				base.c \
				dllist.c \
				fringe.c

EXTRA_DIST =	sglib.h \
				base.h \
				graphs.h \
				hashtable.h \
				qdbmp.c \
				data.h \
				paral_tools.h \
				dllist.h \
				finge.h
